--- a/deportes/donde.html
+++ b/deportes/donde.html
@@ -7,7 +7,7 @@
     <title>Reto11</title>
 </head>
 <body>
-    <table>
+    <table id="reto1">
         <tr>
             <td>NOMBRE</td>
             <td>CALLE</td>
