--- a/deportes/donde2.html
+++ b/deportes/donde2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="principal">
-    <table>
+    <table id="reto1">
         <tr>
             <th>NOMBRE</th>
             <th>CALLE</th>
