--- a/deportes/ejercicio8.html
+++ b/deportes/ejercicio8.html
@@ -15,8 +15,18 @@
             <div class="personaje"><img src="../assets/f02.png" alt="personaje"></div>
             <div class="bajo"><img src="../assets/f01.png" alt="bajo"></div>
         </div>
-        <div id="medio" ></div>
-        <div id="inferior" ></div>
+        <div id="medio">
+            <p>Contenido del div de prueba</p>
+            <div class="nubes"><img src="../assets/f03.png" alt="nubes"></div>
+            <div class="personaje"><img src="../assets/f02.png" alt="personaje"></div>
+            <div class="bajo"><img src="../assets/f01.png" alt="bajo"></div>
+        </div>
+        <div id="inferior" >
+            <p>&lt;div&gt; posterior</p>
+            <div class="nubes"><img src="../assets/f03.png" alt="nubes"></div>
+            <div class="personaje"><img src="../assets/f02.png" alt="personaje"></div>
+            <div class="bajo"><img src="../assets/f01.png" alt="bajo"></div>
+        </div>
     </div>
     
 </body>
